# hebbian_mirror

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  docker-compose.dev.yml  docker-compose.yml  main.py  requirements.txt  test.py
assets/: data.json  download.sh  test.sh
py_src/: __init__.py
py_src/ai_callable/: pretrained.py  train.py
py_src/params/: __init__.py
py_src/utils/: __init__.py  image_utils.py
pytorch_ai_training/: weights.py
src/: main.rs
src/helpers/: mod.rs
src/neuro_net/: mod.rs
src/recognition/: mod.rs
src/router/: mod.rs
src/settings/: mod.rs
