[package]
name = "hebbian_mirror"
version = "0.1.0"
authors = ["len_art <lenart.consulting@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
log = "0.4"
env_logger = "0.6"
failure = "0.1"
tch="0.1"
crossbeam-channel = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64 = "0.11"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]
